Exclude VTIMEZONE from invitations on WinCE

Since WinCE does not support creating proper
VTIMEZONE elements, we omit them and trust on the
standard names from Olson database.

BUG: 263018